Refactored CommentsCard to counter and CommentCardHead.
* Moved Incrementer and Decrementer into src/lib/comments/counter.
* Moved Increment.ts and Decrement.ts into src/lib/comments/counter/scripts.

--- a/.prettierrc
+++ b/.prettierrc
@@ -9,7 +9,7 @@
       "options": {
         "svelteSortOrder": "options-scripts-markup-styles",
         "svelteStrictMode": true,
-        "svelteAllowShorthand": true,
+        "svelteAllowShorthand": false,
         "svelteIndentScriptAndStyle": true,
         "plugins": [ "prettier-plugin-svelte" ]
       }
