--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "since 2016"
   ],
   "scripts": {
-    "start": "svelte-kit dev --port 8951",
-    "build": "svelte-kit build && custom_config/post-build.sh",
-    "package": "svelte-kit package",
-    "preview": "svelte-kit preview --port 8851",
-    "prepare": "svelte-kit sync",
+    "start": "vite --config vite.config.ts dev",
+    "build": "vite build && custom_config/post-build.sh",
+    "package": "vite package",
+    "preview": "vite preview",
+    "prepare": "vite sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0-next.53",
+    "@sveltejs/adapter-auto": "1.0.0-next.54",
     "@sveltejs/adapter-static": "1.0.0-next.34",
-    "@sveltejs/kit": "1.0.0-next.357",
-    "@typescript-eslint/eslint-plugin": "^5.30.4",
-    "@typescript-eslint/parser": "^5.30.4",
+    "@sveltejs/kit": "1.0.0-next.360",
+    "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
+    "@typescript-eslint/eslint-plugin": "^5.30.5",
+    "@typescript-eslint/parser": "^5.30.5",
     "acorn": "^8.7.1",
     "autoprefixer": "^10.4.7",
     "browserslist": "^4.21.1",
@@ -46,7 +47,8 @@
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "vite": "^2.9.13"
   },
   "type": "module"
 }
