Removed brace-style rule.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,10 +20,11 @@
     // "no-console": 1,
     "object-curly-spacing": ["error", "always"],
     "valid-jsdoc": 0,
-    "brace-style": ["warn","stroustrup"],
+    // "brace-style": ["warn","stroustrup"],
+    "brace-style": "off",
     "max-len": ["error", { "code": 100 }],
     "no-tabs": ["error", { "allowIndentationTabs": true }],
-     "indent": "off"
+    "indent": "off"
   },
   "settings": {
     "svelte3/typescript": true // load TypeScript as peer dependency
