--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "start": "vite --config vite.config.ts dev",
-    "build": "vite build && custom_config/post-build.sh",
+    "build": "vite build",
     "package": "vite package",
     "preview": "vite preview",
     "prepare": "vite sync",
@@ -46,6 +46,8 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
+    "svelte-preprocess-import-assets": "^0.1.6",
+    "svelte-sequential-preprocessor": "^0.0.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
     "vite": "^2.9.14"
