--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   ],
   "scripts": {
     "start": "vite --config vite.config.ts dev",
-    "build": "vite build",
+    "build": "vite build && custom_config/post-build.sh",
     "package": "vite package",
     "preview": "vite preview",
     "prepare": "vite sync",
@@ -17,17 +17,17 @@
     "format": "prettier --write --plugin-search-dir=. ."
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0-next.55",
-    "@sveltejs/adapter-static": "1.0.0-next.35",
-    "@sveltejs/kit": "1.0.0-next.370",
-    "@sveltejs/vite-plugin-svelte": "1.0.0-next.49",
-    "@typescript-eslint/eslint-plugin": "^5.30.6",
-    "@typescript-eslint/parser": "^5.30.6",
-    "acorn": "^8.7.1",
+    "@sveltejs/adapter-auto": "1.0.0-next.64",
+    "@sveltejs/adapter-static": "1.0.0-next.38",
+    "@sveltejs/kit": "1.0.0-next.396",
+    "@sveltejs/vite-plugin-svelte": "1.0.1",
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "acorn": "^8.8.0",
     "autoprefixer": "^10.4.7",
-    "browserslist": "^4.21.1",
+    "browserslist": "^4.21.3",
     "cssnano": "^5.1.12",
-    "eslint": "^8.19.0",
+    "eslint": "^8.20.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
@@ -38,10 +38,10 @@
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "sass": "^1.53.0",
+    "sass": "^1.54.0",
     "stylelint": "^14.9.1",
     "stylelint-config-standard": "^26.0.0",
-    "stylelint-config-standard-scss": "^4.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
@@ -50,7 +50,7 @@
     "svelte-sequential-preprocessor": "^0.0.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^2.9.14"
+    "vite": "^3.0.3"
   },
   "type": "module"
 }
