--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "prepare": "vite sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "vitest run",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
     "format": "prettier --write --plugin-search-dir=. ."
   },
@@ -21,6 +22,7 @@
     "@sveltejs/adapter-static": "1.0.0-next.38",
     "@sveltejs/kit": "1.0.0-next.396",
     "@sveltejs/vite-plugin-svelte": "1.0.1",
+    "@testing-library/svelte": "^3.1.3",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
     "acorn": "^8.8.0",
@@ -46,11 +48,10 @@
     "svelte": "^3.49.0",
     "svelte-check": "^2.8.0",
     "svelte-preprocess": "^4.10.7",
-    "svelte-preprocess-import-assets": "^0.1.6",
-    "svelte-sequential-preprocessor": "^0.0.7",
     "tslib": "^2.4.0",
     "typescript": "^4.7.4",
-    "vite": "^3.0.3"
+    "vite": "^3.0.3",
+    "vitest": "^0.19.1"
   },
   "type": "module"
 }
