--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "since 2016"
   ],
   "scripts": {
-    "start": "vite --config vite.config.ts dev",
+    "dev": "vite --config vite.config.ts dev",
     "build": "vite build",
     "package": "vite package",
     "preview": "vite preview",
