--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
-    "format": "prettier --write --plugin-search-dir=. ."
+    "format": "prettier --write --plugin-search-dir=. .",
+    "netlify:deploy": "netlify deploy",
+    "netlify:deploy-prod": "netlify deploy --prod"
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "1.0.0-next.64",
@@ -34,6 +36,7 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
     "html-minifier-terser": "7.0.0-beta.0",
+    "netlify-cli": "^10.12.1",
     "postcss": "^8.4.14",
     "postcss-html": "^1.5.0",
     "postcss-load-config": "^4.0.1",
