Added post-build.sh to build in package.json
* This script minifies all html files.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   ],
   "scripts": {
     "dev": "vite --config vite.config.ts dev",
-    "build": "vite build",
+    "customScript": "custom_config/post-build.sh",
+    "build": "vite build && pnpm customScript",
     "package": "vite package",
     "preview": "vite preview",
     "prepare": "vite sync",
