--- a/netlify.toml
+++ b/netlify.toml
@@ -20,4 +20,15 @@
 
   [headers.values]
     X-Frame-Options = "DENY"
-    X-XSS-Protection = "1; mode=block"
+    X-Content-Type-Options = "nosniff"
+
+[[headers]]
+# Define which paths this specific [[headers]] block will cover.
+  for = "/internal/immutable/*"
+
+  [headers.values]
+  # Long cache for immutable assets.
+  # All files are hashed therfore can be cache busted. 
+    cache-control = '''
+      max-age=604800,
+      immutable'''
