Added Referrer-Policy header.

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,7 @@
   [headers.values]
     X-Frame-Options = "DENY"
     X-Content-Type-Options = "nosniff"
+    Referrer-Policy = "same-origin"
 
 [[headers]]
 # Define which paths this specific [[headers]] block will cover.
