--- a/package.json
+++ b/package.json
@@ -11,51 +11,52 @@
     "build": "vite build && pnpm customScript",
     "package": "vite package",
     "preview": "vite preview",
-    "prepare": "vite sync",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "test": "vitest run",
     "lint": "prettier --check --plugin-search-dir=. . && eslint .",
     "format": "prettier --write --plugin-search-dir=. .",
     "netlify:deploy": "netlify deploy",
-    "netlify:deploy-prod": "netlify deploy --prod"
+    "netlify:deploy-prod": "netlify deploy --prod",
+    "wangler:deploy": "pnpm wrangler pages publish dist --branch production",
+    "_wrangler": "Cannot delete aliased branch so don't use below cmd. https://community.cloudflare.com/t/cloudflare-pages-how-to-delete-aliased-preview-deployments/269292/12",
+    "wrangler:deploy-preview": "pnpm wrangler pages publish dist --branch preview"
   },
   "devDependencies": {
-    "@sveltejs/adapter-auto": "1.0.0-next.64",
-    "@sveltejs/adapter-static": "1.0.0-next.38",
-    "@sveltejs/kit": "1.0.0-next.396",
-    "@sveltejs/vite-plugin-svelte": "1.0.1",
-    "@testing-library/svelte": "^3.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
+    "@sveltejs/adapter-auto": "1.0.0-next.68",
+    "@sveltejs/adapter-static": "1.0.0-next.39",
+    "@sveltejs/kit": "1.0.0-next.445",
+    "@sveltejs/vite-plugin-svelte": "1.0.2",
+    "@testing-library/svelte": "^3.2.1",
+    "@typescript-eslint/eslint-plugin": "^5.35.1",
+    "@typescript-eslint/parser": "^5.35.1",
     "acorn": "^8.8.0",
-    "autoprefixer": "^10.4.7",
+    "autoprefixer": "^10.4.8",
     "browserslist": "^4.21.3",
-    "cssnano": "^5.1.12",
-    "eslint": "^8.20.0",
+    "cssnano": "^5.1.13",
+    "eslint": "^8.23.0",
     "eslint-config-google": "^0.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-svelte3": "^4.0.0",
-    "html-minifier-terser": "7.0.0-beta.0",
-    "netlify-cli": "^10.12.1",
-    "postcss": "^8.4.14",
+    "html-minifier-terser": "7.0.0",
+    "postcss": "^8.4.16",
     "postcss-html": "^1.5.0",
     "postcss-load-config": "^4.0.1",
     "postcss-scss": "^4.0.4",
     "prettier": "^2.7.1",
     "prettier-plugin-svelte": "^2.7.0",
-    "sass": "^1.54.0",
-    "stylelint": "^14.9.1",
-    "stylelint-config-standard": "^26.0.0",
+    "sass": "^1.54.5",
+    "stylelint": "^14.11.0",
+    "stylelint-config-standard": "^28.0.0",
     "stylelint-config-standard-scss": "^5.0.0",
     "stylelint-order": "^5.0.0",
     "svelte": "^3.49.0",
-    "svelte-check": "^2.8.0",
+    "svelte-check": "^2.9.0",
     "svelte-preprocess": "^4.10.7",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.3",
-    "vitest": "^0.19.1"
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vitest": "^0.22.1"
   },
   "type": "module"
 }
